# WaMax

./: .gitignore  .gitmodules  README.md  package-info.json  setup.bat  setup.sh
applications/HelpForMax/: CMakeLists.txt  HelpForMax.rc  MessageBar.cpp  MessageBar.h  RecentTabWidget.cpp  RecentTabWidget.h  RefStructure.cpp  RefStructure.h
applications/HelpForMax/Components/: DescriptionHighlighter.cpp
applications/HelpForMax/Max/: MaxDataType.cpp  MaxDataType.h  MaxLine.cpp  MaxLine.h  MaxObject.cpp  MaxObject.h  MaxPatcher.cpp  MaxPatcher.h  MaxRefStructure.cpp  MaxRefStructure.h  MaxWidget.cpp  MaxWidget.h  StructureWidget.cpp  StructureWidget.h
applications/HelpForMax/Package/: PackageInfo.cpp  PackageInfo.h  PackageModel.cpp
applications/HelpForMax/Patch/: DelegateDataType.h  DelegatePatchType.cpp  DelegatePatchType.h  DescriptionHighlighter.cpp  FileAbstract.cpp  FileAbstract.h  FileHelp.cpp  FileHelp.h  FileInit.cpp  FileInit.h  FileRef.cpp  FileRef.h  PatchInfo.cpp  PatchInfo.h  PatchModelAbstract.cpp  PatchModelAbstract.h  PatchModelArgument.cpp  PatchModelArgument.h  PatchModelHeader.cpp  PatchModelHeader.h  PatchModelNamedMessage.cpp  PatchModelNamedMessage.h  PatchModelOutput.cpp  PatchModelOutput.h  PatchModelTypedMessage.cpp  PatchModelTypedMessage.h  PatchRefModelAbstract.cpp  PatchRefModelAbstract.h  PatchRefModelHeader.cpp  PatchRefModelNamedMessage.cpp  PatchRefModelOutput.cpp  PatchRefModelOutput.h  PatchRefModelTypedMessage.h  PatchRefStructure.cpp  PatchSuggestView.cpp  PatchSuggestView.h  PatchTabWidget.cpp  PatchTabWidget.h  PatchTreeView.cpp  PatchTreeView.h  (+16 more)
applications/HelpForMax/PatchRef/: PatchRefModelArgument.cpp  PatchRefModelArgument.h  PatchRefModelHeader.h  PatchRefModelNamedMessage.h  PatchRefModelTypedMessage.cpp  PatchRefTreeView.cpp  PatchRefTreeView.h  PatchRefWidget.cpp  PatchRefWidget.h  PatchRefWidget.ui
applications/HelpForMax/Suggest/: SuggestModelAbstract.cpp  SuggestModelAbstract.h  SuggestModelArgument.cpp  SuggestModelArgument.h  SuggestModelNamedMessage.cpp  SuggestModelOutput.cpp  SuggestModelOutput.h  SuggestModelTypedMessage.h  SuggestTreeView.cpp  SuggestWidget.cpp  SuggestWidget.h  SuggestWidget.ui
applications/HelpForMax/_Forms/: PatchWidget.ui
applications/HelpForMax/_Resources/: MaxLinkInactive.afdesign
applications/MaxScreen/: .gitignore  CMakeLists.txt  Convertor.h  Rainbow.cpp  Rainbow.h  Server.cpp  Server.h  TestWidget.cpp
applications/MaxScreen/Common/: Client.h  Client.hpp  ImageSize.h  ImageSize.hpp  SharedImage.hpp
applications/MaxScreen/Gui/: MaxScreenGui.qrc  WaitScreen.qml
applications/MaxScreen/Icons/: icons.qrc
source/: CMakeLists.txt  README.md  clean.sh  create_code_launch.py  new_project.py
source/HelpForMax/: CMakeLists.txt  HelpForMax.h  HelpForMax.hpp  Locker.h  MainWindow.cpp  MainWindow.h  RecentTabWidget.cpp  SchemaWidget.cpp  SchemaWidget.h  TestClient.cpp  TestClient.h
source/HelpForMax/Graph/: GraphAbstractAlgorithm.cpp  GraphAbstractAlgorithm.h  GraphAbstractEdge.cpp  GraphAbstractEdge.h  GraphAbstractGraph.cpp  GraphAbstractGraph.h  GraphAbstractVertex.cpp  GraphAbstractVertex.h  GraphAlgorithm.cpp  GraphAlgorithm.h  GraphEdgeAbstract.cpp  GraphEdgeAbstract.h  GraphEdgeSimple.cpp  GraphEdgeSimple.h  GraphGraph.cpp  GraphGraph.h  GraphMaxLine.cpp  GraphMaxLine.h  GraphMaxObject.cpp  GraphMaxObject.h  GraphMaxPatch.cpp  GraphMaxPatch.h  GraphSymbolicAlgorithm.cpp  GraphSymbolicAlgorithm.h  GraphSymbolicEdge.cpp  GraphSymbolicEdge.h  GraphSymbolicGraph.cpp  GraphSymbolicGraph.h  GraphSymbolicGraph.hpp  GraphSymbolicVertex.cpp  GraphSymbolicVertex.h  GraphVertex.cpp  GraphVertex.h  GraphWidget.cpp  GraphWidget.h  MaxLine.cpp  MaxObject.cpp  MaxPatcher.h  NamedVertex.cpp  NamedVertex.h  (+6 more)
source/HelpForMax/Max/: MaxDataType.cpp  MaxLine.cpp  MaxLine.h  MaxObject.cpp  MaxObject.h  MaxPatcher.cpp  MaxPatcher.h  StructureAlgorithm.cpp  StructureEdge.h  StructureGraph.cpp  StructureGraph.h  StructureWidget.cpp  StructureWidget.h  build.cmake
source/HelpForMax/Package/: PackageInfo.cpp  PackageInfo.h  PackageModel.cpp  PackageModel.h  PackageTabWidget.cpp  PackageTabWidget.h  PackageWidget.cpp  PackageWidget.h  PackageWidget.ui  build.cmake
source/HelpForMax/Patch/: DelegateDataType.cpp  DelegateDataType.h  DelegatePatchType.h  FileAbstract.cpp  FileAbstract.h  FileHelp.cpp  FileHelp.h  FileInit.cpp  FileInit.h  FileRef.cpp  FileRef.h  MaxDataType.h  PatchModelAbstract.cpp  PatchModelAbstract.h  PatchModelArgument.cpp  PatchModelArgument.h  PatchModelHeader.cpp  PatchModelHeader.h  PatchModelNamedMessage.cpp  PatchModelNamedMessage.h  PatchModelOutput.cpp  PatchModelTypedMessage.cpp  PatchRefStructure.cpp  PatchRefStructure.h  PatchStructure.h  PatchSuggestView.h  PatchTabWidget.cpp  PatchTabWidget.h  PatchTreeView.cpp  PatchTreeView.h  PatchWidget.cpp  PatchWidget.h
source/HelpForMax/_Forms/: PatchWidget.ui
source/HelpForMax/_Resources/: MenuAndToolBar.xml  PatchSuggest.afdesign  Resources.qrc  TreeOpen.afdesign
source/HelpForMax/icons/: HelpCurrent.afdesign  HelpOutdated.afdesign  MaxLinkActive.afdesign  PackageLink.afdesign  TreeClosed.afdesign  TreeClosedOutdated.afdesign  TreeOpen.afdesign  icons.qrc
source/MaxScreen/: CMakeLists.txt  Info.plist  MainWindow.cpp  MainWindow.h  MaxScreen.precompiled.h  MaxScreen.pro  MaxScreen.rc  ScreenSize.h  ScreenSize.hpp  Server.cpp  Server.h  TestWidget.cpp  TestWidget.h  TestWidget.ui  TouchPoint.h  TouchPoint.hpp  main.cpp  test.py
source/MaxScreen/Common/: Client.h  Client.hpp  Data.h  Data.hpp  ImageSize.hpp  Marker.h  SharedImage.h  SharedImage.hpp  Size.h  Size.hpp  TouchPoint.h  TouchPoint.hpp  (+1 more)
source/_common/: AudioBlock.h  AudioBlock.hpp  ByteFour.h  ByteFour.hpp  ByteFours.h  ByteFours.hpp  CommonQt.h  MaxPatcher.h  MaxPatcher.hpp  MaxQtJson.h  MaxQtJson.hpp  MultichannelObject.h  MultichannelObject.hpp  MxObject.hpp  Range.h  Range.hpp  RingBuffer.h  RingBuffer.hpp  SampleDelay.h  SampleDelay.hpp  SharedData.h  SharedData.hpp  common.cmake
source/maxglobal/: CMakeLists.txt
source/maxobjects/: CMakeLists.txt
(+593 files in other folders)
